--- a/8088/demo/moire/make_table.vcxproj.filters
+++ b/8088/demo/moire/make_table.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="..\..\..\include\alfe\vectors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
