Various demo effects

--- a/8088/xtserver/xtserver.config
+++ b/8088/xtserver/xtserver.config
@@ -5,7 +5,7 @@ serialBaudRate = 115200;
 fromAddress = "XT Server <xtserver@reenigne.org>";
 pipe = "\\\\.\\pipe\\xtserver";
 lamePath = "C:\\Program Files\\LAME\\lame.exe";
-lameOptions = "-r -s 44100 -m l";
+lameOptions = "-m r";
 adminAddress = "andrew@reenigne.org";
 htdocsPath = "C:\\Program Files\\Apache Software Foundation\\Apache2.2\\htdocs";
 captureFieldPath = "C:\\capture_field.exe";
