--- a/8088/cga/calibrate/calibrate4/calibrate4.vcxproj.filters
+++ b/8088/cga/calibrate/calibrate4/calibrate4.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="..\..\..\..\include\alfe\rotors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
