--- a/8088/demo/modto262/modto262.vcxproj.filters
+++ b/8088/demo/modto262/modto262.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="..\..\..\include\alfe\array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\character_source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\space.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
