--- a/8088/cga/calibrate/make_decoder/make_decoder.vcxproj
+++ b/8088/cga/calibrate/make_decoder/make_decoder.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="..\..\..\..\include\alfe\complex.h" />
     <ClInclude Include="..\..\..\..\include\alfe\main.h" />
     <ClInclude Include="..\..\..\..\include\alfe\rotors.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\string.h" />
     <ClInclude Include="..\..\..\..\include\alfe\terminal6.h" />
     <ClInclude Include="..\..\..\..\include\alfe\user.h" />
     <ClInclude Include="..\..\..\..\include\alfe\vectors.h" />
