--- a/8088/cga/calibrate/make_decoder/make_decoder.vcxproj.filters
+++ b/8088/cga/calibrate/make_decoder/make_decoder.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="..\..\..\..\include\alfe\array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\string.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
