--- a/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
+++ b/8088/xtserver/xtqueue/xtqueue.vcxproj.filters
@@ -80,5 +80,11 @@
     <ClInclude Include="..\..\..\include\alfe\identifier.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\exception.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\alfe\thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
