--- a/8088/cga/capture/capture_live/capture_live.vcxproj.filters
+++ b/8088/cga/capture/capture_live/capture_live.vcxproj.filters
@@ -59,5 +59,11 @@
     <ClInclude Include="..\..\..\..\include\alfe\colour_space.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\bitmap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
