Rationals in config files, image resampling with FFTs

--- a/image_resample/741.config
+++ b/image_resample/741.config
@@ -1,5 +1,5 @@
 inputPicture = "../../741.png";
 outputSize = Vector(300, 144);
-subpixels = false;
-tripleResolution = true;
+subpixels = true; //false;
+// tripleResolution = true;
 outputPicture = "../../741small.png";
