VCR decoder timebase correction

--- a/image_resample/test2.config
+++ b/image_resample/test2.config
@@ -1,4 +1,4 @@
-inputPicture = "../../test2.png";
-outputSize = Vector(2, 2);
+inputPicture = "../../peacock_240_910.png";
+outputSize = Vector(900, 262);
 subpixels = false;
-outputPicture = "../../test2_small.png";
+outputPicture = "../../peacock_240_900.png";
