--- a/berapa/berapa.vcxproj
+++ b/berapa/berapa.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="..\include\alfe\function.h" />
     <ClInclude Include="..\include\alfe\hash.h" />
     <ClInclude Include="..\include\alfe\rational_functions.h" />
+    <ClInclude Include="..\include\alfe\reference.h" />
     <ClInclude Include="..\include\alfe\stream.h" />
     <ClInclude Include="..\include\alfe\identifier.h" />
     <ClInclude Include="..\include\alfe\integer_functions.h" />
