--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -2,7 +2,7 @@ Time ms = second/1000;
 Time hdot = 44*ms/630000;  // 14.318MHz
 
 Intel8088 cpu;
-cpu.cycleTime = 3*hdot;  // 4.77MHz
+cpu.frequency = 1/(3*hdot);  // 4.77MHz
 
 ISA8BitBus bus; bus.cpu = cpu.bus;
 
@@ -18,7 +18,7 @@ Intel8259PIC pic;                  bus.slot = pic.bus;
 Intel8327DMA dmac;                 bus.slot = dmac.bus;
 Intel8255PPI ppi;                  bus.slot = ppi.bus;
 Intel8253PIT pit;                  bus.slot = pit.bus;
-pit.cycleTime = 4*cpu.cycleTime;  // 1.193MHz
+pit.frequency = cpu.frequency/4;  // 1.193MHz
 
 PCXTKeyboardPort keyboardPort;
 ppi.a = keyboardPort.data;
@@ -29,7 +29,7 @@ pic.irq1 = keyboardPort.irq;
 PCXTKeyboard keyboard; keyboard.plug = keyboardPort.socket;
 
 IBMCGA cga; bus.slot = cga.cardEdge;
-cga.cycleTime = hdot;
+cga.frequency = 1/hdot;
 
 RAM cgaRam;
 cgaRam.rowBits = 7;
