Cycles, Ticks and RAM

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -7,8 +7,14 @@ cpu.frequency = 1/(3*hdot);  // 4.77MHz
 ISA8BitBus bus; bus.cpu = cpu.bus;
 
 RAM ram;
+// ram.rowBits is 7 for 4116 RAM chips
+//                8 for 4164
+//                9 for 41256
+// We use 9 here because programs written for rowBits == N will work
+// for rowBits < N but not necessarily rowBits > N.
 ram.rowBits = 9;
-ram.bytes = 0xa0000;
+ram.bytes = 640*1024;  // 640kB should be enough for anyone.
+// Real hardware can work with a decay time as short as hdot*12*18<<ram.rowBits
 ram.decayTime = (4*ms / 256) << ram.rowBits;
 bus.slot = ram.bus;
 
