--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -21,7 +21,7 @@ bus.slot = ram.bus;
 NMISwitch nmiSwitch;               bus.slot = nmiSwitch.bus;
 DMAPageRegisters dmaPageRegisters; bus.slot = dmaPageRegisters.bus;
 Intel8259PIC pic;                  bus.slot = pic.bus;
-Intel8327DMA dmac;                 bus.slot = dmac.bus;
+Intel8237DMA dmac;                 bus.slot = dmac.bus;
 Intel8255PPI ppi;                  bus.slot = ppi.bus;
 Intel8253PIT pit;                  bus.slot = pit.bus;
 pit.frequency = cpu.frequency/4;  // 1.193MHz
@@ -34,7 +34,7 @@ pic.irq1 = keyboardPort.irq;
 
 PCXTKeyboard keyboard; keyboard.plug = keyboardPort.socket;
 
-IBMCGA cga; bus.slot = cga.cardEdge;
+IBMCGA cga; bus.slot = cga.bus;
 cga.frequency = 1/hdot;
 
 RAM cgaRam;
