Assignment to components

--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -33,10 +33,11 @@ ppi.b7 = keyboardPort.clear;
 ppi.b6 = keyboardPort.clock;
 pic.irq1 = keyboardPort.irq;
 
-PCXTKeyboard keyboard; keyboard.plug = keyboardPort.socket;
+PCXTKeyboard keyboard; keyboardPort = keyboard;
 
 IBMCGA cga; bus.slot = cga.bus;
 cga.frequency = 1/hdot;
+cga.rom = "../../external/8088/roms/5788005.u33";
 
 RAM cgaRam;
 cgaRam.rowBits = 7;
@@ -44,9 +45,7 @@ cgaRam.bytes = 0x4000;
 cgaRam.decayTime = 2*ms;
 cga.ram = cgaRam.bus;
 
-cga.rom = "../../external/8088/roms/5788005.u33";
-
 RGBIMonitor monitor;
-monitor.rgbiPlug = cga.rgbiSocket;
+cga.rgbiOutput = monitor;
 
 
